--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TaskTwo.afterMethod()[pri:0, instance:com.class01.TaskTwo@210366b4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@92150540</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TaskTwo.afterMethod()[pri:0, instance:com.class01.TaskTwo@210366b4]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@92150540</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TaskTwo.beforeAfter()[pri:0, instance:com.class01.TaskTwo@210366b4]">&lt;&lt;beforeAfter</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@92150540</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>-27</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TaskTwo.beforeClass()[pri:0, instance:com.class01.TaskTwo@210366b4]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@92150540</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TaskTwo.beforeMethod()[pri:0, instance:com.class01.TaskTwo@210366b4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@92150540</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TaskTwo.beforeMethod()[pri:0, instance:com.class01.TaskTwo@210366b4]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@92150540</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTwo.test1()[pri:0, instance:com.class01.TaskTwo@210366b4]">test1</td> 
-  <td>main@92150540</td>   <td></td> </tr>
-<tr bgcolor="c4639c">  <td>20/05/19 20:10:53</td>   <td>1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TaskTwo.test2()[pri:0, instance:com.class01.TaskTwo@210366b4]">test2</td> 
-  <td>main@92150540</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DifferentAnnotations.afterClass()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>-1</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DifferentAnnotations.afterMethod()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterMethod</td> 
+<td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>37</td> <td title="&lt;&lt;DifferentAnnotations.afterSuite()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>1</td> <td>&nbsp;</td><td title="&lt;&lt;DifferentAnnotations.afterTest()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>-23</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DifferentAnnotations.beforeClass()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>-13</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DifferentAnnotations.beforeMethod()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeMethod</td> 
+<td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>-39</td> <td title="&gt;&gt;DifferentAnnotations.beforeSuite()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>-34</td> <td>&nbsp;</td><td title="&gt;&gt;DifferentAnnotations.beforeTest()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>-12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DifferentAnnotations.test()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">test</td> 
+  <td>main@561959774</td>   <td></td> </tr>
 </table>
