--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,22 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>0</td> <td title="&gt;&gt;DifferentAnnotations.beforeSuite()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>5</td> <td>&nbsp;</td><td title="&gt;&gt;DifferentAnnotations.beforeTest()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>16</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DifferentAnnotations.beforeClass()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>26</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;DifferentAnnotations.beforeMethod()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&gt;&gt;beforeMethod</td> 
-<td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>27</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="DifferentAnnotations.test()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">test</td> 
-  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DifferentAnnotations.afterMethod()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterMethod</td> 
-<td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>39</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;DifferentAnnotations.afterClass()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>40</td> <td>&nbsp;</td><td title="&lt;&lt;DifferentAnnotations.afterTest()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
-<tr bgcolor="767ab2">  <td>20/05/20 07:19:48</td>   <td>76</td> <td title="&lt;&lt;DifferentAnnotations.afterSuite()[pri:0, instance:com.class01.DifferentAnnotations@368f2016]">&lt;&lt;afterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@561959774</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>20/05/23 10:33:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AssertionDemo.openBrowserAndNavigate()[pri:0, instance:com.class02.AssertionDemo@6ebc05a6]">&gt;&gt;openBrowserAndNavigate</td> 
+<td>&nbsp;</td>  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>20/05/23 10:33:18</td>   <td>305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionDemo.titleValidation()[pri:0, instance:com.class02.AssertionDemo@6ebc05a6]">titleValidation</td> 
+  <td>main@917819120</td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>20/05/23 10:33:18</td>   <td>315</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AssertionDemo.quitBrowser()[pri:0, instance:com.class02.AssertionDemo@6ebc05a6]">&lt;&lt;quitBrowser</td> 
+<td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="ceaf6a">  <td>20/05/23 10:33:18</td>   <td>341</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AssertionDemo.logoValidation()[pri:2, instance:com.class02.AssertionDemo@6ebc05a6]">logoValidation</td> 
+  <td></td>   <td></td> </tr>
 </table>
